[project]
name = "ash-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "envyaml>=1.10.211231",
    "langchain>=0.3.25",
    "langchain-community==0.3.19",
    "langchain-google-genai>=2.1.4",
    "langchain-ollama>=0.3.2",
    "oci>=2.150.3",
]

[project.scripts]
explain = "ash_tools:explain"
help = "ash_tools:help"
proof = "ash_tools:proof"
cmd = "ash_tools:cmd"

[tool.setuptools]
py-modules=["ash_tools"]